# raygui_pixel_drawing_app

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake
assets/: iconset.rgi
libs/: CMakeLists.txt
libs/rdrawing/: CMakeLists.txt  README.md
libs/rdrawing/src/: utils.h
src/: CMakeLists.txt  app.cpp  app.hpp  app_utils.cpp  app_utils.hpp  context.cpp  context.hpp  draw_win.cpp  draw_win.hpp  img.cpp  import_file.cpp  import_file.hpp  layer_pannel.cpp  layer_pannel.hpp  main.cpp  main_test.cpp  main_window.cpp  main_window.hpp  new_win.cpp  new_win.h  new_win.hpp  project.cpp  project.hpp  resize_canvas.cpp  resize_canvas.hpp  template.cpp  toolbar.cpp  toolbar.hpp  topbar.cpp  topbar.hpp  workspace.cpp  workspace.hpp  workspaces.cpp  workspaces.hpp  workspaces_pannel.cpp  workspaces_pannel.hpp
src/app/: CMakeLists.txt  app.cpp  app.hpp  context.hpp  control.cpp  control.hpp  import_file.hpp  layer_pannel.hpp  main_window.cpp  main_window.hpp  offset.hpp  style.hpp  template.cpp  template.hpp  toolbar.cpp  toolbar.hpp  topbar.cpp  topbar.hpp  utils.cpp  utils.hpp  workspace.cpp  workspace.hpp  workspaces.cpp  workspaces.hpp
src/app/layer/: layer.cpp  layer.hpp  layer_pannel.cpp  layer_pannel.hpp  sprite.hpp
src/app/ui/: new_win.cpp  resize_canvas.hpp
src/libs/rdrawing/: CMakeLists.txt
src/tool/: tool.hpp
src/ui/: CMakeLists.txt  new_win.cpp  new_win.hpp  resize_canvas.cpp  win_widget.cpp  win_widget.hpp
src/utils/: CMakeLists.txt  app_utils.cpp  app_utils.hpp
src/win/: new_win.cpp  new_win.hpp  resize_canvas.cpp  resize_canvas.hpp
