
set(SOURCES
	app.cpp
	context.cpp
	import_file.cpp
	main_window.cpp
	toolbar.cpp
	topbar.cpp
	workspace.cpp
	workspaces.cpp
	template.cpp
	layer/layer_pannel.cpp
	layer/layer.cpp
	layer/sprite.cpp
	utils.cpp
	ui/new_win.cpp
	ui/resize_canvas.cpp
	ui/win_widget.cpp
)

set(HEADERS
	app.hpp
	context.hpp
	import_file.hpp
	main_window.hpp
	toolbar.hpp
	topbar.hpp
	workspace.hpp
	workspaces.hpp
	template.hpp
	layer/layer_pannel.hpp
	layer/layer.hpp
	layer/sprite.hpp
	utils.hpp
	ui/new_win.hpp
	ui/resize_canvas.hpp
	ui/win_widget.hpp
	style.hpp
)

add_library(app-lib
	${SOURCES}
	${HEADERS}
)
target_link_libraries(app-lib
	raylib
	raygui
	rdrawing
)
